# rust-eloquent

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  largest_chunk.rs
.github/workflows/: release-plz.yml
docs/: audit_report.md  audit_report_complete.md  spec.md  v2_roadmap.md
rust-eloquent/: Cargo.toml
rust-eloquent-macros/: Cargo.toml
rust-eloquent-macros/src/: builder.rs  lib.rs  models.rs  relationships.rs
rust-eloquent/examples/: advanced_joins_and_subqueries.rs  artisan_demo.rs  basic.rs  collections.rs  compile_time_safety.rs  constrained_eager_loading.rs  enterprise_scaling.rs  factories_and_seeders.rs  field_hiding.rs  hooks.rs  json_casting.rs  many_to_many.rs  migrations.rs  observers.rs  polymorphic_relationships.rs  query_logging.rs  redis_cache_and_events.rs  relationships.rs  scopes.rs  transactions.rs
rust-eloquent/src/: collection.rs  database.rs  lib.rs  schema.rs  types.rs
