[package]
name = "rust-eloquent-macros"
version = "1.1.0"
edition = "2024"
description = "Procedural macros for the rust-eloquent ORM."
license = "MIT"
repository = "https://github.com/venelouis/rust-eloquent"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
