[package]
name = "rust-eloquent-macros"
version = "1.1.9"
edition = "2021"
description = "Procedural macros for the rust-eloquent ORM."
license = "MIT"
repository = "https://github.com/venelouis/rust-eloquent"
readme = "../README.md"

[lib]
proc-macro = true

[features]
strict-postgres = []
strict-mysql = []
strict-sqlite = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
rust-eloquent = { path = "../rust-eloquent" }
